xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__absent_context.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\".\")"
---
Err(
    XPDY0002 {
        src: NamedSource {
            name: "input",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                0,
            ),
            length: SourceOffset(
                1,
            ),
        },
    },
)
