xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__atomize.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"(1) eq (1)\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
