xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__atomize_too_many_values.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run(\"0 + 12 + ((2, 3, 4) + 1)\")"
---
Err(
    XPTY0004 {
        src: NamedSource {
            name: "input",
            source: "<redacted>",
        ,
        span: SourceSpan {
            offset: SourceOffset(
                10,
            ),
            length: SourceOffset(
                13,
            ),
        },
    },
)
