xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__atomize_xml_attribute_eq_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a f=\"FOO\"/><b f=\"FOO\"/></doc>\"#, \"doc/a/@f eq doc/b/@f\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
