xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__atomize_xml_attribute_missing.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a/></doc>\"#, \"doc/a/@f eq 'FOO'\")"
---
Ok(
    Atomic(
        Boolean(
            false,
        ),
    ),
)
