xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__atomize_xml_eq_true.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml(r#\"<doc><a>A</a><b>A</b></doc>\"#, \"doc/a eq doc/b\")"
---
Ok(
    Atomic(
        Boolean(
            true,
        ),
    ),
)
