xee-xpath/src/snapshots/xee_xpath__ir_interpret__tests__attribute_namespace_no_default.snap
---
source: xee-xpath/src/ir_interpret.rs
expression: "run_xml_default_ns(r#\"<doc xmlns=\"http://example.com\" a=\"hello\"/>\"#,\n    \"doc / @a / local-name()\", \"http://example.com\")"
---
Sequence(
    RefCell {
        value: Sequence {
            items: [
                Atomic(
                    String(
                        "a",
                    ),
                ),
            ],
        },
    },
)
